kubernetes/weather-frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend
  namespace: weather
  labels:
    app: weather-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-frontend
  template:
    metadata:
      name: weather-frontend
      labels:
        app: weather-frontend
    spec:
      containers:
        - name: weather-frontend
          image: localhost:32000/weather-frontend:v1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
