kubernetes/weather-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-frontend
  namespace: weather
spec:
  selector:
    app: weather-frontend
  ports:
    - port: 80
      targetPort: 80
