kubernetes/weather-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-weather-frontend
  namespace: weather
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: www.weather.spirteque.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-frontend
                port:
                  number: 80
  tls:
  - hosts:
      - "www.weather.spirteque.com"
    secretName: weather-tls-secret-v2
